--- a/application/views/scripts/requirejs.phtml
+++ b/application/views/scripts/requirejs.phtml
@@ -1,57 +1,62 @@
-<script src='http://requirejs.org/docs/release/2.1.1/comments/require.js'></script>
+<!-- <script src='http://requirejs.org/docs/release/2.1.1/comments/require.js'></script> -->
+<script src='<?php echo $this->baseUrl ?>/public/scripts/lib/requirejs/2.1.1/require.js'></script>
 <script>
 	
 	requirejs.config({
-	    // hack for IE
-	    enforceDefine: true,
-	    
+		// hack for IE
+		enforceDefine: true,
+		
 		baseUrl: '<?php echo $this->baseUrl ?>/public/scripts',
 			
-		    paths: {
-		        'jquery': [
-		            'http://code.jquery.com/jquery-1.8.2.min',
-		            // local load fallback
-		            'lib/jquery/1.8.2/jquery.min'
-		        ],
-		        
-			     // see https://github.com/jrburke/jqueryui-amd/tree/latest
-			     // requires node.js to be installed to produce the amd version
-		        'jqueryui': 'lib/jqueryui/1.9.1-amd',
+			paths: {
+				'jquery': [
+					'http://code.jquery.com/jquery-1.8.2.min',
+					// local load fallback
+					'lib/jquery/1.8.2/jquery.min'
+				],
+				
+				 // see https://github.com/jrburke/jqueryui-amd/tree/latest
+				 // requires node.js to be installed to produce the amd version
+				'jqueryui': 'lib/jqueryui/1.9.1-amd',
 
-		        // see http://spinejs.com/pages/download - spine.js extracted
-		        // and wrapped as module with jquery as dependency
-		        'spine': 'lib/spine/v1.0.8-0-g5449124-amd/spine',
+				// see http://spinejs.com/pages/download - spine.js extracted
+				// and wrapped as module with jquery as dependency
+				'spine': 'lib/spine/v1.0.8-0-g5449124-amd/spine',
 
 				// only lang extensions, based on https://github.com/Rixius/prototype.node.js
-		        'prototype': 'lib/prototype/1.7.1-amd',
-		        // alernative complete prototype.js using shim
-//		        'prototype': 'lib/prototype/1.7.1/prototype',
-						        
-//		        'object': 'lib/prototype/1.7.1-amd/object',
-		         
-		        // jquery alert
-		        'utils': 'lib/utils',
+				'prototype': 'lib/prototype/1.7.1-amd',
+				// alernative complete prototype.js using shim
+//				'prototype': 'lib/prototype/1.7.1/prototype',
+								
+				'underscore': 'lib/underscore/1.4.2-amd/underscore',
 
-		        'mod': 'mod/spine'
-//		        'mod': 'mod/prototype-amd'
-//		        'mod': 'mod/prototype-shim'
-		    }
+				'backbone': 'lib/backbone/0.9.2-amd/backbone',
+					 
+				// jquery alert
+				'utils': 'lib/utils',
+
+				'mod': 'mod/backbone'
+//				'mod': 'mod/underscore'
+//				'mod': 'mod/spine'
+//				'mod': 'mod/prototype-amd'
+//				'mod': 'mod/prototype-shim'
+			}
 /*
 			,
  			// Alternative shim config - usage of amd prefered
 			// use Prototype.Class having prototype as a dependency
 			// all the Object.extend, etc come for free
-		    shim: {
-			    'prototype': {
-				    exports: 'Class',
-				    init: function () {
-					    alert ('shim init called');
-					    return {
-						    Class: Class
-					    };
-				    }
-			    }
-		    }
+			shim: {
+				'prototype': {
+					exports: 'Class',
+					init: function () {
+						alert ('shim init called');
+						return {
+							Class: Class
+						};
+					}
+				}
+			}
 */
 //			locale: 'de-de'
 		});
